logs/2021-08-19_04-48-19.txt
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100 20.9M  100 20.9M    0     0  67.8M      0 --:--:-- --:--:-- --:--:-- 67.8M
npm WARN deprecated node-pre-gyp@0.17.0: Please upgrade to @mapbox/node-pre-gyp: the non-scoped node-pre-gyp package is deprecated and only the @mapbox scoped package will recieve updates in the future

added 67 packages, and audited 68 packages in 4s

2 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
npm notice 
npm notice New minor version of npm available! 7.19.1 -> 7.20.6
npm notice Changelog: <https://github.com/npm/cli/releases/tag/v7.20.6>
npm notice Run `npm install -g npm@7.20.6` to update!
npm notice 

up to date, audited 28 packages in 508ms

4 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
/home/minecraft/multicraft/servers/server213362/bot.js:76
  let userIsPlayingLoL = checkIfUserIsPlayingLoL(newPresence?.activities)
      ^

SyntaxError: Identifier 'userIsPlayingLoL' has already been declared
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1031:15)
    at Module._compile (node:internal/modules/cjs/loader:1065:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:79:12)
    at node:internal/main/run_main_module:17:47
